<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.sebade.relasiroom.ui.intro.OnBoardingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        android:padding="@dimen/layout_padding">

        <ImageView
            android:id="@+id/imageView"
            style="@style/obimagestyle"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ob_two" />

        <TextView
            android:id="@+id/textView"
            style="@style/obtextheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/pre_sale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/textView3"
            style="@style/obtextsuheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="70dp"
            android:text="@string/obtwo_subtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lanjutkan"
            style="@style/obbuttonstyle.buttonpink"
            android:onClick="@{() -> viewModel.btnContinue() }"
            android:layout_marginBottom="50dp"
            android:text="@string/lanjutkan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
