<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.sebade.relasiroom.ui.auth.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout3"
            style="@style/layout_style.layout_auth_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".ui.register.LoginPageFragment">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="167dp"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/splash_logo_mov" />

            <TextView
                android:id="@+id/textView4"
                style="@style/obtextheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="71dp"
                android:text="@string/sign_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView5"
                style="@style/obtextsuheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView7"
                style="@style/obtextsuheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textInputLayoutCustom"
                app:boxStrokeColor="@color/set_stroke_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:validationInput="@{viewModel.usernameIsValid}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:paddingStart="0dp"
                    android:singleLine="true"
                    android:text="@={viewModel.username}"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textInputLayoutCustom"
                app:boxStrokeColor="@color/set_stroke_selector"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/pink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:validationInput="@{viewModel.passwordIsValid}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:paddingStart="0dp"
                    android:singleLine="true"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_lewatiperkenalan"
                style="@style/obbuttonstyle.buttonblue"
                android:onClick="@{()-> viewModel.btnSignUpOnClick()}"
                android:text="@string/Sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_lanjutkan"
                style="@style/obbuttonstyle.buttonpink"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_in"
                android:onClick="@{() -> viewModel.btnSignIn()}"
                app:layout_constraintBottom_toTopOf="@+id/btn_lewatiperkenalan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_opacity"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:setVisibility="@{viewModel.progressbarIsShow}"
            tools:setVisibility="gone"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>

<!-- <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout3"
            style="@style/layout_style.layout_auth_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".ui.register.LoginPageFragment">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="167dp"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/splash_logo_mov" />

            <TextView
                android:id="@+id/textView4"
                style="@style/obtextheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="71dp"
                android:text="@string/sign_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView5"
                style="@style/obtextsuheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView7"
                style="@style/obtextsuheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textInputLayoutCustom"
                app:boxStrokeColor="@color/set_stroke_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:paddingStart="0dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"

                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textInputLayoutCustom"
                app:boxStrokeColor="@color/set_stroke_selector"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/pink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:paddingStart="0dp"
                    android:singleLine="true"

                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_lewatiperkenalan"
                style="@style/obbuttonstyle.buttonblue"
                android:layout_marginBottom="50dp"
                android:text="@string/Sign_up"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_lanjutkan"
                style="@style/obbuttonstyle.buttonpink"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_in"

                app:layout_constraintBottom_toTopOf="@+id/btn_lewatiperkenalan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_opacity"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"

            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>-->